@@ -1,1 +1,2 @@
 DIST formtastic-2.2.1.gem 123904 SHA256 25893fd9326fae37607f4f82681057d96f8300fe9a38b5b10881c2c20bcceb0d SHA512 2f08666db3736bbf1be4f9ee198834373eb8b810d45065067e1c76426f8088a78b8ce7caf2d4008d34908fb49bb052fece106168783e489d59634b3cb5a1bcf7 WHIRLPOOL a276cc65a0e117525a4a5270550b0400f69fe902086515a99864310e926164f1672c3ce280193e99d91aa2a6b98cc648419178dcd18d61a6cafc62376d7c02c2
+DIST formtastic-2.3.1.gem 125440 SHA256 5496efac5943f8bff33c989cd24ed03f129070594b165ee143330da4bb6ca266 SHA512 64d74f4e678de8ffcc3154cfb3833a95bae7a96d37f350c5697363aababdf6445ee36089f43f199f3c688183a331faa969ddbcc5e748588d129ad67bde385cc3 WHIRLPOOL e8a2f0e39543b0eba0f6719805acae9b5dccbac1c5db8daa05fd171c57b4829acba9e13d590a40cf133385c67635dbd21e864affac225abf1f3fbe7d7e2af265
